# gridoai-ml

./: .gcloudignore  .gitignore  Dockerfile  Makefile  README.md  main.py  mocked.json  mocked_word2vec.json  pyproject.toml  pytest.ini  start.sh
context_handler/: app.py  entities.py  setup.py
context_handler/db/: __init__.py  abs_db.py  milvus.py
context_handler/model/: word2vec.py
context_handler/models/: doc2vec.py  word2vec.py
gridoai_ml/: app.py  entities.py  modal_app.py  setup.py  utils.py
gridoai_ml/db/: __init__.py  abs_db.py  milvus.py
gridoai_ml/knowledge_graphs/: build.py
gridoai_ml/models/: doc2vec.py  word2vec.py
gridoai_ml/text_embedding_models/: __init__.py  abs_model.py  doc2vec.py  instructor.py  mocked.py  multilingual_e5_base.py  multilingual_e5_base_onnx.py
scripts/: warmup_modal.sh
tests/: conftest.py  test_embedding.py  test_main.py
