[tool.poetry]
name = "context-handler"
version = "0.1.0"
description = ""
authors = ["Pedro Cleto <cl3t0.sh@gmail.com>"]
readme = "README.md"
packages = [{include = "context_handler"}]

[tool.poetry.dependencies]
python = "^3.8"
gensim = "^4.3.1"
fastapi = {extras = ["all"], version = "^0.95.2"}
uvicorn = {extras = ["standard"], version = "^0.22.0"}


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
