[tool.poetry]
name = "gridoai-ml"
version = "0.1.0"
description = ""
authors = ["Pedro Cleto <cl3t0.sh@gmail.com>"]
readme = "README.md"
packages = [{ include = "gridoai_ml" }]

[tool.poetry.dependencies]
python = "^3.8"
gensim = "^4.3.1"
fastapi = { extras = ["all"], version = "^0.95.2" }
uvicorn = { extras = ["standard"], version = "^0.23.2" }
pytest = "^7.3.1"
pymilvus = "^2.2.8"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
types-requests = "^2.31.0.0"
smart-open = { extras = ["gcs"], version = "^6.3.0" }
google-cloud-storage = "^2.9.0"
instructorembedding = { version = "^1.0.1", source = "pypi" }
tqdm = "^4.65.0"
sentence-transformers = { version = "^2.2.2", source = "pypi" }
websockets = "^11.0.3"
wsproto = "^1.2.0"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
